git commit -m "More comments in csproj"

--- a/WeatherWebAppLuiC/WeatherWebAppLuiC.csproj
+++ b/WeatherWebAppLuiC/WeatherWebAppLuiC.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
-
+<!--Newtonsoft package added here to activate Weather App.-->
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
